[FIX] dark mode funkar + även smooth transition

--- a/main/style.css
+++ b/main/style.css
@@ -25,6 +25,11 @@ body.dark-mode{
     max-width: 100%;
 }
 
+.rubrik.dark-mode{
+    background-color: #2c2c2c;
+    color: white;
+}
+
 .profilbild{
     display: flex;
     flex-direction: column;
@@ -41,10 +46,14 @@ body.dark-mode{
     cursor: pointer;
 }
 
-
 .nav-bar{
     background-color: aliceblue;
     padding: 15px;
+}
+
+.nav-bar.dark-mode {
+    background-color: #2c2c2c;
+    color: white;
 }
 
 .nav-links{
@@ -126,8 +135,9 @@ a:hover{
     font-size: 14px;
 }
 
-footer.dark-mode{
-    background-color: #1e1e1e;
+.footer.dark-mode {
+    background-color: #2e2e2e;
+    color: white;
 }
 
 .kontakt{
